<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="Typos">Fintech_sample1</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_userId">Email</string>          /////変更/////
    <string name="prompt_password">"パスワード"</string>   /////変更/////
    <string name="action_sign_in">"ログイン"</string>     /////変更/////
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"ようこそ!"</string>/////変更/////
    <string name="invalid_userId">"メールアドレスではありません"</string>  //変更
    <string name="invalid_password">"6文字以上"</string>               //変更
    <string name="login_failed">"メールアドレスまたはパスワードが違います"</string>//変更
    <string name="target_period">"対象期間"</string>
    <string name="from">"2022/07/01"</string>
    <string name="range">"～"</string>
    <string name="to">"2022/08/31"</string>
    <string name="display">"表示"</string>
    <string name="page_transition">"グラフ"</string>               //変更
    <string name="withdrawal_details">"入出金履歴"</string>
    <string name="date">"日付"</string>
    <string name="contents">"内容"</string>
    <string name="amount">"金額"</string>
    <string name="budget">"収支合計"</string>
    <string name="income">"収入"</string>
    <string name="spending">"支出"</string>
    <string name="max_spending">"最大支出"</string>
    <string name="max_date">"日付"</string>
    <string name="max_dealer">"取引先"</string>
    <string name="max_contents">"内容"</string>
    <string name="max_purpose">"用途"</string>
    <string name="max_amount">"金額"</string>
    <string name="list1" tools:ignore="Typos">"List1"</string>
    <string name="list2">"List2"</string>
    <string name="list3">"List3"</string>
    <string name="tab1_contents" tools:ignore="Typos">"TAB1の内容（フラグメント）"</string>
    <string name="tab2_contents">"TAB2の内容（フラグメント）"</string>
</resources>
