<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <!-- 対象期間を入力する領域 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/target_period" />

        <Spinner
            android:id="@+id/etStart"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp" />



        <TextView
            android:layout_width="15dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:text="@string/range">

            <requestFocus />
        </TextView>

        <!--        <EditText-->
        <!--            android:id="@+id/etEnd"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_weight="2"-->
        <!--            android:inputType="number"-->
        <!--            android:text="@string/to"-->
        <!--            android:textSize="14sp"-->
        <!--            android:importantForAutofill="no"-->
        <!--            tools:ignore="LabelFor" />-->

        <Spinner
            android:id="@+id/etEnd"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/btSearch"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:text="@string/display" />

        <Button
            android:id="@+id/btLink"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:text="@string/page_transition"
            android:textSize="10sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffa500"
            android:text="@string/withdrawal_details"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ffbb00"
            android:gravity="center"
            android:text="@string/date" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="#ffbb00"
            android:gravity="center"
            android:text="@string/contents" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ffbb00"
            android:gravity="center"
            android:text="@string/amount" />
    </LinearLayout>

    <!-- 収支の表示領域 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ListView
            android:id="@+id/lvHistoricalData"
            android:layout_width="match_parent"
            android:layout_height="400dp">
        </ListView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffa500"
            android:text="@string/budget"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/income"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvIncome"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/spending"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvExpense"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="16sp" />



        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="収支"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvTotal"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="16sp" />



        </LinearLayout>


    </LinearLayout>

</LinearLayout>
